tests/baselines/reference/dependentReturnType11(strict=true).errors.txt
dependentReturnType11.ts(9,5): error TS2322: Type 'T' is not assignable to type 'T extends Nullable ? Nullable : never'.
  Type 'null' is not assignable to type 'T extends Nullable ? Nullable : never'.


==== dependentReturnType11.ts (1 errors) ====
    // shouldn't crash
    
    type Nullable = null | undefined;
    
    function test1<T extends null>(
      x: T,
    ): T extends Nullable ? Nullable : never {
      if (x == undefined) {
        return x;
        ~~~~~~
!!! error TS2322: Type 'T' is not assignable to type 'T extends Nullable ? Nullable : never'.
!!! error TS2322:   Type 'null' is not assignable to type 'T extends Nullable ? Nullable : never'.
      }
      return x;
    }
    